can enter picks by name (as well as rank), neaten up some boilerplate
also select input text on focus, to be extended to other views (e.g. entering scores)

--- a/templates/chart.html
+++ b/templates/chart.html
@@ -98,11 +98,11 @@
         <table>
           <thead>
             <tr>
-              <th class="plyr_lbl hor_sect" rowspan="2">Player (by num)</th>
+              <th class="plyr_lbl hor_sect" rowspan="2">Player (by Num)</th>
               <th class="hor_sect" rowspan="2">Wins</th>
               <th class="hor_sect" rowspan=2>Losses</th>
-              <th class="vert_sect" colspan="{{seed_rnds}}">Points For (by round)</th>
-              <th class="vert_sect" colspan="{{seed_rnds}}">Points Against (by round)</th>
+              <th class="vert_sect" colspan="{{seed_rnds}}">Points For (by Round)</th>
+              <th class="vert_sect" colspan="{{seed_rnds}}">Points Against (by Round)</th>
               <th class="hor_sect vert_sect" rowspan="2">Win Pct</th>
               <th class="hor_sect" rowspan=2>Pts Diff</th>
               <th class="hor_sect" rowspan=2>Rank</th>
@@ -182,11 +182,11 @@
         <table>
           <thead>
             <tr>
-              <th class="plyr_lbl hor_sect" rowspan="2">Team (by div seed)</th>
+              <th class="plyr_lbl hor_sect" rowspan="2">Team (by Div Seed)</th>
               <th class="hor_sect" rowspan="2">Wins</th>
               <th class="hor_sect" rowspan=2>Losses</th>
-              <th class="vert_sect" colspan="{{tourn_rnds}}">Points For (by round)</th>
-              <th class="vert_sect" colspan="{{tourn_rnds}}">Points Against (by round)</th>
+              <th class="vert_sect" colspan="{{tourn_rnds}}">Points For (by Round)</th>
+              <th class="vert_sect" colspan="{{tourn_rnds}}">Points Against (by Round)</th>
               <th class="hor_sect vert_sect" rowspan="2">Win Pct</th>
               <th class="hor_sect" rowspan=2>Pts Diff</th>
               <th class="hor_sect" rowspan=2>Div Rank</th>
