--- a/templates/chart.html
+++ b/templates/chart.html
@@ -61,7 +61,7 @@
 
   <body>
     <div class="container">
-      <span class="container_lbl">{{tourn_name}} &ndash; {{title}}</span>
+      <span class="container_lbl">{{tourn.name}} &ndash; {{title}}</span>
 
       {% if chart_num == 0 %}
       <div class="section seed_bracket">
@@ -77,7 +77,7 @@
             </tr>
           </thead>
           <tbody>
-            {% for rnd in range(1, seed_rnds + 1) %}
+            {% for rnd in range(1, rnds + 1) %}
             <tr>
               <td>{{rnd}}</td>
               <td class="vert_sect">{{matchups[rnd][1]|safe}}</td>
@@ -101,19 +101,19 @@
               <th class="plyr_lbl hor_sect" rowspan="2">Player (by Num)</th>
               <th class="hor_sect" rowspan="2">Wins</th>
               <th class="hor_sect" rowspan=2>Losses</th>
-              <th class="vert_sect" colspan="{{seed_rnds}}">Points For (by Round)</th>
-              <th class="vert_sect" colspan="{{seed_rnds}}">Points Against (by Round)</th>
+              <th class="vert_sect" colspan="{{rnds}}">Points For (by Round)</th>
+              <th class="vert_sect" colspan="{{rnds}}">Points Against (by Round)</th>
               <th class="hor_sect vert_sect" rowspan="2">Win Pct</th>
               <th class="hor_sect" rowspan=2>Pts Diff</th>
               <th class="hor_sect" rowspan=2>Rank</th>
             </tr>
             <tr>
               <th class="hor_sect vert_sect">1</th>
-              {% for rnd in range(2, seed_rnds + 1) %}
+              {% for rnd in range(2, rnds + 1) %}
               <th class="hor_sect">{{rnd}}</th>
               {% endfor %}
               <th class="hor_sect vert_sect">1</th>
-              {% for rnd in range(2, seed_rnds + 1) %}
+              {% for rnd in range(2, rnds + 1) %}
               <th class="hor_sect">{{rnd}}</th>
               {% endfor %}
             </tr>
@@ -125,11 +125,11 @@
               <td class="tally"><img {{win_tallies[pl.player_num]|safe}} /></td>
               <td class="tally"><img {{loss_tallies[pl.player_num]|safe}} /></td>
               <td class="vert_sect">{{team_pts[pl.player_num].get(1, '-')|safe}}</td>
-              {% for rnd in range(2, seed_rnds + 1) %}
+              {% for rnd in range(2, rnds + 1) %}
               <td>{{team_pts[pl.player_num].get(rnd, '-')|safe}}</td>
               {% endfor %}
               <td class="vert_sect">{{opp_pts[pl.player_num].get(1, '-')|safe}}</td>
-              {% for rnd in range(2, seed_rnds + 1) %}
+              {% for rnd in range(2, rnds + 1) %}
               <td>{{opp_pts[pl.player_num].get(rnd, '-')|safe}}</td>
               {% endfor %}
               <td class="vert_sect">{{round_val(pl.seed_win_pct)}}%</td>
