--- a/templates/euchmgr.html
+++ b/templates/euchmgr.html
@@ -20,6 +20,16 @@
        font-size: x-large;
        font-weight: bold;
      }
+     .err_dlg div {
+       #width: 27rem;
+       width: 22rem;
+       color: #D10000;
+       margin: 0.2rem 0.3rem 0.5rem 0.5rem;
+       overflow: auto;
+     }
+     .err_dlg button {
+       margin: 0.5rem 0.3rem 0.2rem 0.5rem;
+     }
      .hdr_view {
        display: inline-block;
        width: 11rem;
@@ -136,7 +146,7 @@
 
   <body>
     <dialog class="err_dlg">
-      <p></p>
+      <div></div>
       <button autofocus>Close</button>
     </dialog>
     {% if not tourn or (tourn.stage_compl or 0) < 2 %}
@@ -212,7 +222,7 @@
               </td>
             </tr>
             <tr>
-              <td class="td_lbl">Overwrite Existing?</td>
+              <td class="td_lbl">Overwrite Existing:</td>
               <td>
                 <input type="checkbox" name="force" value="yes">
               </td>
@@ -432,7 +442,7 @@
        $('.err_dlg')[0].close();
      });
      const show_error = function(err_text) {
-       $('.err_dlg p').text(err_text);
+       $('.err_dlg div').text(err_text);
        $('.err_dlg')[0].showModal();
      };
 
