maintain player/team stats and game denorms as scores are entered
to do: end-of-stage validation for seeding and tourn stats (wins, scores)

--- a/templates/euchmgr.html
+++ b/templates/euchmgr.html
@@ -20,15 +20,16 @@
        font-size: x-large;
        font-weight: bold;
      }
+     .err_dlg {
+       padding: 1.1rem 1.4rem;
+     }
      .err_dlg div {
-       #width: 27rem;
        width: 22rem;
        color: #D10000;
-       margin: 0.2rem 0.3rem 0.5rem 0.5rem;
        overflow: auto;
      }
      .err_dlg button {
-       margin: 0.5rem 0.3rem 0.2rem 0.5rem;
+       margin-top: 1.2rem;
      }
      .hdr_view {
        display: inline-block;
